nc-img-neuro/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nc-img-neuro-service
spec:
  selector:
    service: nc-img-neuro
  ports:
    - name: http
      port: 5000
      protocol: TCP
