nc-img-neuro/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nc-img-neuro-ingress
  annotations:
    kubernetes.io/tls-acme: "false"
spec:
  rules:
    - host: img-neuro-sindenis.cloud.okteto.net
      http:
        paths:
          - path: /
            backend:
              serviceName: nc-img-neuro-service
              servicePort: 5000
